Fix facebook like layout bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,28 +117,6 @@
   }
 }
 
-// Facebook like
-.fb-like-wrapper {
-  max-width: 100%;
-  overflow: hidden;
-
-  .fb-like {
-    float: right;
-
-    @include media-query($on-tablet) {
-      float: none;
-      margin-top: $spacing-unit / 2;
-    }
-  }
-}
-
-.post {
-  .fb-like {
-    float: none;
-    margin-top: $spacing-unit;
-  }
-}
-
 
 // Site footer
 
@@ -155,6 +133,15 @@
   .divider {
     opacity: 0.5;
     padding: 0 10px;
+  }
+
+  .fb-like {
+    float: right;
+
+    @include media-query($on-tablet) {
+      float: none;
+      margin-top: $spacing-unit / 2;
+    }
   }
 }
 
@@ -240,6 +227,16 @@
   .post-link {
     margin-top: $spacing-unit / 1.333;
     margin-bottom: 0;
+  }
+
+  .fb-like-wrapper {
+    max-width: 100%;
+    overflow: hidden;
+
+    .fb-like {
+      float: none;
+      margin-top: $spacing-unit;
+    }
   }
 }
 
